Name:          pontarius-xmpp
Version:       0.2.0.0
Cabal-Version: >= 1.6
Build-Type:    Simple
License:       OtherLicense
License-File:  LICENSE.md
Copyright:     Dmitry Astapov, Pierre Kovalev, Mahdi Abdinejadi, Jon Kristensen,
               IETF Trust, Philipp Balzarek
Author:        Jon Kristensen, Mahdi Abdinejadi, Philipp Balzarek
Maintainer:    info@jonkri.com
Stability:     alpha
Homepage:      https://github.com/jonkri/pontarius-xmpp/
Bug-Reports:   mailto:info@jonkri.com
Package-URL:   http://www.jonkri.com/releases/pontarius-xmpp-0.2.0.0.tar.gz
Synopsis:      An incomplete implementation of RFC 6120 (XMPP: Core)
Description:   Pontarius XMPP is a work in progress implementation of
               RFC 6120 (XMPP: Core).
Category:      Network
Tested-With:   GHC ==7.0.4, GHC ==7.4.1

Library
  hs-source-dirs: source
  Exposed: True
  Build-Depends: attoparsec        >=0.10.0.3
               , base              >4 && <5
               , base64-bytestring >=0.1.0.0
               , binary            >=0.4.1
               , bytestring        >=0.9.1.9
               , conduit           >=0.5 && <1.0
               , containers        >=0.4.0.0
               , crypto-api        >=0.9
               , crypto-random-api >=0.2
               , cryptohash        >=0.6.1
               , data-default      >=0.2
               , dns               >=0.3.0
               , hslogger          >=1.1.0
               , iproute           >=1.2.4
               , lifted-base       >=0.1.0.1
               , mtl               >=2.0.0.0
               , network           >=2.3
               , pureMD5           >=2.1.2.1
               , resourcet         >=0.3.0
               , random            >=1.0.0.0
               , split             >=0.1.2.3
               , stm               >=2.1.2.1
               , stringprep        >=0.1.3
               , text              >=0.11.1.5
               , tls               >=1.1.0
               , tls-extra         >=0.5.0
               , transformers      >=0.2.2.0
               , void              >=0.5.5
               , xml-types         >=0.3.1
               , xml-conduit       >=1.0
               , xml-picklers      >=0.3
  Exposed-modules: Network.Xmpp
                 , Network.Xmpp.Internal
  Other-modules: Network.Xmpp.Concurrent
               , Network.Xmpp.Concurrent.Types
               , Network.Xmpp.Concurrent.Basic
               , Network.Xmpp.Concurrent.IQ
               , Network.Xmpp.Concurrent.Message
               , Network.Xmpp.Concurrent.Presence
               , Network.Xmpp.Concurrent.Threads
               , Network.Xmpp.Concurrent.Monad
               , Network.Xmpp.Marshal
               , Network.Xmpp.Sasl
               , Network.Xmpp.Sasl.Common
               , Network.Xmpp.Sasl.Mechanisms
               , Network.Xmpp.Sasl.Mechanisms.DigestMd5
               , Network.Xmpp.Sasl.Mechanisms.Plain
               , Network.Xmpp.Sasl.Mechanisms.Scram
               , Network.Xmpp.Sasl.StringPrep
               , Network.Xmpp.Sasl.Types
               , Network.Xmpp.Stream
               , Network.Xmpp.Tls
               , Network.Xmpp.Types
               , Network.Xmpp.Utilities
  GHC-Options: -Wall

Source-Repository head
  Type: git
  Location: git://github.com/jonkri/pontarius-xmpp.git

Source-Repository this
  Type: git
  Location: git://github.com/jonkri/pontarius-xmpp.git
  Tag: 0.2.0.0
