Name:          pontarius-xmpp
Version:       0.3.0.0
Cabal-Version: >= 1.6
Build-Type:    Simple
License:       BSD3
License-File:  LICENSE.md
Copyright:     Dmitry Astapov, Pierre Kovalev, Mahdi Abdinejadi, Jon Kristensen,
               IETF Trust, Philipp Balzarek
Author:        Jon Kristensen, Philipp Balzarek
Maintainer:    info@jonkri.com
Stability:     alpha
Homepage:      https://github.com/pontarius/pontarius-xmpp/
Bug-Reports:   https://github.com/pontarius/pontarius-xmpp/issues/
Package-URL:   http://www.jonkri.com/releases/pontarius-xmpp-0.3.0.0.tar.gz
Synopsis:      An XMPP client library
Description:   Pontarius XMPP is a work in progress implementation of RFC 6120
               ("XMPP CORE"), RFC 6121 ("XMPP IM"), and RFC 6122 ("XMPP ADDR").
               While in alpha, Pontarius XMPP works quite well and fulfills most
               requirements of the RFCs.
Category:      Network
Tested-With:   GHC >=7.0.1 && <=7.6.3

Extra-Source-Files: README.md
                  , examples/echoclient/echoclient.cabal
                  , examples/echoclient/LICENSE.md
                  , examples/echoclient/Main.hs
                  , examples/echoclient/README.md
                  , examples/echoclient/Setup.hs

Flag with-th {
  Description: Enable Template Haskell support
  Default:     True
}

Library
  hs-source-dirs: source
  Exposed: True

  -- The only different between the below two blocks is that the first one caps
  -- the range for the `bytestring' package, and that the second one includes
  -- `template-haskell' for GHC 7.6.1 and above.

  Build-Depends: attoparsec           >=0.10.0.3
               , base                 >4 && <5
               , base64-bytestring    >=0.1.0.0
               , binary               >=0.4.1
               , conduit              >=1.0.1
               , containers           >=0.4.0.0
               , crypto-api           >=0.9
               , crypto-random-api    >=0.2
               , cryptohash           >=0.6.1
               , cryptohash-cryptoapi >=0.1
               , data-default         >=0.2
               , dns                  >=0.3.0
               , hslogger             >=1.1.0
               , iproute              >=1.2.4
               , lifted-base          >=0.1.0.1
               , mtl                  >=2.0.0.0
               , network              >=2.4.1.0
               , pureMD5              >=2.1.2.1
               , resourcet            >=0.3.0
               , random               >=1.0.0.0
               , split                >=0.1.2.3
               , stm                  >=2.1.2.1
               , stringprep           >=0.1.3
               , text                 >=0.11.1.5
               , tls                  >=1.1.0
               , tls-extra            >=0.5.0
               , transformers         >=0.2.2.0
               , void                 >=0.5.5
               , xml-types            >=0.3.1
               , xml-conduit          >=1.1.0.7
               , xml-picklers         >=0.3.3

  If impl(ghc ==7.0.1) {
    Build-Depends: bytestring         >=0.9.1.9 && <=0.9.2.1
  } Else {
    Build-Depends: bytestring         >=0.9.1.9
  }
  If flag(with-th) && impl(ghc >=7.6.1) {
    Build-Depends: template-haskell >=2.5
  }
  Exposed-modules: Network.Xmpp
                 , Network.Xmpp.IM
                 , Network.Xmpp.Internal
  Other-modules: Network.Xmpp.Concurrent
               , Network.Xmpp.Concurrent.Basic
               , Network.Xmpp.Concurrent.IQ
               , Network.Xmpp.Concurrent.Message
               , Network.Xmpp.Concurrent.Monad
               , Network.Xmpp.Concurrent.Presence
               , Network.Xmpp.Concurrent.Threads
               , Network.Xmpp.Concurrent.Types
               , Network.Xmpp.IM.Message
               , Network.Xmpp.IM.Presence
               , Network.Xmpp.IM.Roster
               , Network.Xmpp.IM.Roster.Types
               , Network.Xmpp.Marshal
               , Network.Xmpp.Sasl
               , Network.Xmpp.Sasl.Common
               , Network.Xmpp.Sasl.Mechanisms
               , Network.Xmpp.Sasl.Mechanisms.DigestMd5
               , Network.Xmpp.Sasl.Mechanisms.Plain
               , Network.Xmpp.Sasl.Mechanisms.Scram
               , Network.Xmpp.Sasl.StringPrep
               , Network.Xmpp.Sasl.Types
               , Network.Xmpp.Stanza
               , Network.Xmpp.Stream
               , Network.Xmpp.Tls
               , Network.Xmpp.Types
               , Network.Xmpp.Utilities

  if flag(with-th) && impl(ghc >= 7.6.1)
    CPP-Options: -DWITH_TEMPLATE_HASKELL
  GHC-Options: -Wall

Source-Repository head
  Type: git
  Location: git://github.com/pontarius/pontarius-xmpp.git

Source-Repository this
  Type: git
  Location: git://github.com/pontarius/pontarius-xmpp.git
  Tag: 0.3.0.0
