Name:          pontarius-xmpp
Version:       0.5.2
Cabal-Version: >= 1.9.2
Build-Type:    Custom
License:       BSD3
License-File:  LICENSE.md
Copyright:     Dmitry Astapov, Pierre Kovalev, Mahdi Abdinejadi, Jon Kristensen,
               IETF Trust, Philipp Balzarek
Author:        Philipp Balzarek
Maintainer:    info@jonkri.com
Stability:     alpha
Homepage:      https://github.com/pontarius/pontarius-xmpp/
Bug-Reports:   https://github.com/pontarius/pontarius-xmpp/issues/
Synopsis:      An XMPP client library
Description:   Pontarius XMPP is a work in progress implementation of RFC 6120
               ("XMPP CORE"), RFC 6121 ("XMPP IM"), and RFC 6122 ("XMPP ADDR").
               While in alpha, Pontarius XMPP works quite well and fulfills most
               requirements of the RFCs.
Category:      Network
Tested-With:   GHC ==7.10.1

Extra-Source-Files: README.md
                  , ChangeLog.md
                  , examples/echoclient/echoclient.cabal
                  , examples/echoclient/LICENSE.md
                  , examples/echoclient/Main.hs
                  , examples/echoclient/README.md
                  , examples/echoclient/Setup.hs

Flag with-th {
  Description: Enable Template Haskell support
  Default:     True
}

Library
  hs-source-dirs: source
  Exposed: True
  Build-Depends: attoparsec           >=0.10.0.3
               , base                 >4 && <5
               , base64-bytestring    >=0.1.0.0
               , binary               >=0.4.1
               , conduit              >=1.2.4.2 && < 1.3
               , containers           >=0.4.0.0
               , crypto-api           >=0.9
               , crypto-random        >=0.0.5
               , cryptohash           >=0.6.1
               , cryptohash-cryptoapi >=0.1
               , data-default         >=0.2
               , dns                  >=0.3.0
               , exceptions           >=0.6
               , hslogger             >=1.1.0
               , iproute              >=1.2.4
               , lens-family
               , lifted-base          >=0.1.0.1
               , mtl                  >=2.0.0.0
               , network              >=2.3.1.0
               , profunctors          >= 4
               , pureMD5              >=2.1.2.1
               , random               >=1.0.0.0
               , resourcet            >=0.3.0
               , split                >=0.1.2.3
               , stm                  >=2.4
               , stringprep           >=1.0.0
               , text                 >=0.11.1.5
               , tls                  >=1.3
               , transformers         >=0.3
               , unbounded-delays     >=0.1
               , void                 >=0.5.5
               , x509-system          >=1.4
               , xml-conduit          >=1.1.0.7
               , xml-picklers         >=0.3.3
               , xml-types            >=0.3.1

  If impl(ghc ==7.0.1) {
    Build-Depends: bytestring         >=0.9.1.9 && <=0.9.2.1
  } Else {
    Build-Depends: bytestring         >=0.9.1.9
  }
  If flag(with-th) && impl(ghc >=7.6.1) {
    Build-Depends: template-haskell >=2.5
  }
  Exposed-modules: Network.Xmpp
                 , Network.Xmpp.IM
                 , Network.Xmpp.Internal
                 , Network.Xmpp.Lens
  Other-modules:   Network.Xmpp.Concurrent
                 , Network.Xmpp.Concurrent.Basic
                 , Network.Xmpp.Concurrent.IQ
                 , Network.Xmpp.Concurrent.Message
                 , Network.Xmpp.Concurrent.Monad
                 , Network.Xmpp.Concurrent.Presence
                 , Network.Xmpp.Concurrent.Threads
                 , Network.Xmpp.Concurrent.Types
                 , Network.Xmpp.IM.Message
                 , Network.Xmpp.IM.Presence
                 , Network.Xmpp.IM.PresenceTracker
                 , Network.Xmpp.IM.Roster
                 , Network.Xmpp.IM.Roster.Types
                 , Network.Xmpp.IM.PresenceTracker
                 , Network.Xmpp.IM.PresenceTracker.Types
                 , Network.Xmpp.Marshal
                 , Network.Xmpp.Sasl
                 , Network.Xmpp.Sasl.Common
                 , Network.Xmpp.Sasl.Mechanisms
                 , Network.Xmpp.Sasl.Mechanisms.DigestMd5
                 , Network.Xmpp.Sasl.Mechanisms.Plain
                 , Network.Xmpp.Sasl.Mechanisms.Scram
                 , Network.Xmpp.Sasl.StringPrep
                 , Network.Xmpp.Sasl.Types
                 , Network.Xmpp.Stanza
                 , Network.Xmpp.Stream
                 , Network.Xmpp.Tls
                 , Network.Xmpp.Types
                 , Network.Xmpp.Utilities

  if flag(with-th) && impl(ghc >= 7.6.1)
    CPP-Options: -DWITH_TEMPLATE_HASKELL
  GHC-Options: -Wall -fwarn-tabs

Test-Suite tests
  Type: exitcode-stdio-1.0
  main-is: Main.hs
  Build-Depends: Cabal
               , QuickCheck
               , async
               , async
               , base
               , conduit
               , containers
               , data-default
               , derive
               , hslogger
               , hspec
               , hspec-expectations
               , lens
               , mtl
               , network
               , pontarius-xmpp
               , quickcheck-instances
               , ranges
               , smallcheck
               , stm
               , stringprep >= 1.0.0
               , tasty
               , tasty-hspec
               , tasty-hunit
               , tasty-quickcheck
               , tasty-th
               , text
               , transformers
               , xml-picklers
               , xml-types
  HS-Source-Dirs: tests
  Other-modules: Tests.Arbitrary
               , Tests.Arbitrary.Common
               , Tests.Arbitrary.Xml
               , Tests.Arbitrary.Xmpp
               , Tests.Parsers
               , Tests.Picklers
               , Tests.Stream
  ghc-options: -Wall -O2 -fno-warn-orphans

Test-Suite doctest
  Type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Doctest.hs
  GHC-Options: -Wall -threaded
  Build-Depends: base
               , doctest
               , directory
               , filepath
               , QuickCheck
               , derive
               , quickcheck-instances

Test-Suite runtests
  Type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Run.hs
  other-modules: Run.Payload
  GHC-Options: -Wall -threaded
  Build-Depends: base
               , HUnit
               , configurator
               , directory
               , filepath
               , hslogger
               , hspec
               , hspec-expectations
               , mtl
               , network
               , pontarius-xmpp
               , stm
               , text
               , xml-picklers
               , xml-types
               , tasty
               , tasty-hunit
               , tls

benchmark benchmarks
  type: exitcode-stdio-1.0
  build-depends: base
               , criterion
               , pontarius-xmpp
  hs-source-dirs: benchmarks
  main-is: Bench.hs
  ghc-options: -O2

Source-Repository head
  Type: git
  Location: git://github.com/pontarius/pontarius-xmpp.git
