Name: pontarius
Version: 0.1.0.0
Cabal-Version: >= 1.6
Build-Type: Simple
-- License:
License-File: LICENSE
Copyright: Copyright © 2010-2012, Jon Kristensen
Author: Jon Kristensen, Mahdi Abdinejadi, Philipp Balzarek
Maintainer: jon.kristensen@nejla.com
Stability: alpha
-- Homepage:
Bug-Reports: mailto:jon.kristensen@nejla.com
-- Package-URL:
Synopsis: An incomplete implementation of RFC 6120 (XMPP: Core)
Description: Pontarius is a work in progress implementation of
             RFC 6120 (XMPP: Core).
Category: Network
Tested-With: GHC == 7.4.1
-- Data-Files:
-- Data-Dir:
-- Extra-Source-Files:
-- Extra-Tmp-Files:

Library
  hs-source-dirs: src
  Exposed: True
  Build-Depends: base          >4 && <5
               , conduit           -any
               , void              -any
               , resourcet         -any
               , containers        -any
               , random            -any
               , tls               -any
               , tls-extra         -any
               , pureMD5           -any
               , base64-bytestring -any
               , binary            -any
               , attoparsec        -any
               , crypto-api        -any
               , text              -any
               , bytestring        -any
               , transformers      -any
               , mtl               -any
               , network           -any
               , lifted-base       -any
               , split             -any
               , stm               -any
               , xml-types         -any
               , xml-conduit       -any
               , xml-types-pickle  -any
               , data-default      -any
               , stringprep        >= 0.1.5
  Exposed-modules: Network.XMPP
                 , Network.XMPP.Bind
                 , Network.XMPP.Concurrent
                 , Network.XMPP.Marshal
                 , Network.XMPP.Monad
                 , Network.XMPP.Message
                 , Network.XMPP.Pickle
                 , Network.XMPP.Presence
                 , Network.XMPP.SASL
                 , Network.XMPP.Session
                 , Network.XMPP.Stream
                 , Network.XMPP.TLS
                 , Network.XMPP.Types
  Other-modules:   Network.XMPP.JID
                 , Network.XMPP.Concurrent.Types
                 , Network.XMPP.Concurrent.IQ
                 , Network.XMPP.Concurrent.Threads
                 , Network.XMPP.Concurrent.Monad
                 , Text.XML.Stream.Elements
                 , Data.Conduit.TLS
  GHC-Options: -Wall


Source-Repository head
  Type: git
  Location: git://github.com/nejla/pontarius.git

-- Source-Repository this
--   Type: git
--   -- Module:
--   Location: git://github.com/nejla/pontarius.git
--   Tag: 0.0.7.0
--   -- Subdir: